feat(scene): init canvas and context (2d)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="./build/main.js" async></script>
 </head>
 <body>
+  <canvas id="scene"></canvas>
   <a class="source" href="https://github.com/JimJ92120/game-of-life-ts" target="_blank">source</a>
 </body>
 </html>
